--- a/domain1.conf
+++ b/domain1.conf
@@ -1,6 +1,6 @@
 server {
 
-        root /root/domains/%name%;
+        root /root/domains/%name%.dudosyka.ru;
 
         index index.html index.htm index.nginx-debian.html;
 
